Fixed scrollbars not appearing

--- a/components/Main/Main.styl
+++ b/components/Main/Main.styl
@@ -5,6 +5,7 @@
 .container
 	display flex
 	height 100%
+	overflow hidden
 
 main
 
